src/less/angularJSExampleDisplay.less
div#angularJSExampleDisplayPage {
  height: calc(100% - 100px);
  //height: 100%;
}

div#angularJSExampleDisplayInnerPageWrapper {
  height: 100%;
  width: 100%;
  overflow: auto;
  //background-color: #f5f8fa;
}

div#angularJSExampleDisplay {
  display: inline-block;
 & label {
   display: grid;
 }
}

div#angularJSExampleDisplayCurrentConditionsWrapper {
  width: fit-content;
  width: -moz-fit-content;
  margin: auto;
  margin-top: 15px;
}

div#angularJSExampleDisplayTitle,
div#angularJSExampleDisplayLocation{
  & h1 {
    color: #282e44;
    text-transform: capitalize;
    font-family: "Open Sans", Helvetica, Arial, sans-serif;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 10px;
    border-bottom: solid;
    border-color: #282E43;
    width: fit-content;
    width: -moz-fit-content;
    margin: auto;
  }
  & h2 {
    color: #282e44;
    text-transform: capitalize;
    font-family: "Open Sans", Helvetica, Arial, sans-serif;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 20px;
    width: -moz-fit-content;
    margin: auto;
  }
  & img {
    width: 50px;
    vertical-align: middle;
    margin-left: 10px;
  }
}

div#angularJSExampleDisplayLocation {
  margin-bottom: 25px;
}

div#angularJSExampleDisplayInputWrapper {
  display: flex;
  width: fit-content;
  width: -moz-fit-content;
  margin: auto;
}

div#angularJSExampleDisplayWrapper {
  width: fit-content;
  width: -moz-fit-content;
  margin: auto;
  text-transform: capitalize;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  text-align: -moz-right;
  text-align: -webkit-right;
  text-align: right;
}

div#angularJSExampleDisplayCurrentConditions {
  //padding-top: 10px;
  display: grid;
  //width: fit-content;
  //width: -moz-fit-content;
  //margin: auto;
  //background-color: rgba(0, 0, 0, 0.125);
  //border-radius: 10px;
  & img {
    margin: auto;
  }
  & label {
    font-family: "Open Sans", Helvetica, Arial, sans-serif;
    color: #282e44;
    font-size: 18px;
    text-transform: capitalize;
    //margin-left: 10px;
    width: max-content;
    margin: auto;
  }
  & h3 {
    color: #282e44;
    text-transform: capitalize;
    font-family: "Open Sans", Helvetica, Arial, sans-serif;
    text-align: center;
    //padding-top: 15px;
    width: -moz-fit-content;
    margin: auto;
  }
}

div#angularJSExampleDisplayWeatherLabelWrapper {
  display: grid;
  //padding-top: 5px;
  text-align: right;
  float: left;
  border-right: solid;
  border-right-width: 2px;
  padding-top: 10px;
  padding-bottom: 45px;
  padding-right: 5px;
  //width: 105px;
  & label {
    font-family: "Open Sans", Helvetica, Arial, sans-serif;
    color: #282e44;
    font-size: 18px;
    text-transform: capitalize;
    //margin-left: 10px;
    width: max-content;
  }
  & label:nth-child(4) {
    //margin-top: 10px;
  }
  & label:nth-child(5) {
    margin-top: 45px;
  }
  & label:nth-child(6) {
    margin-top: 45px;
  }
  //padding-bottom: 15px;
  //padding-right: 15px;
}

div#angularJSExampleDisplayWeatherDataWrapper{
  float: left;
  display: grid;
  //padding-top: 5px;
  width: fit-content;
  width: -moz-fit-content;
  margin-top: 10px;
  & label {
    font-family: "Open Sans", Helvetica, Arial, sans-serif;
    color: #282e44;
    font-size: 18px;
    text-transform: capitalize;
    margin-left: 10px;
    width: max-content;
  }
}

div#angularJSExampleDisplay {
  //padding-right: 10px;
  //padding-left: 10px;
  //padding-bottom: 10px;
  //margin-left: 10px;
  //background-color: rgba(0, 0, 0, 0.125);
  //border-radius: 10px;
  //margin-right: 10px;
}

